# Laboratory-works

./: .gitignore  README.md
sem1/inf/1_var9/: Time_formatter.cpp
sem1/inf/2_var27/: main.cpp
sem1/inf/3_var30/: main.cpp
sem1/inf/3_var30/headers/: bot.hpp  field.hpp  iotools.hpp  objects.hpp  strategy.hpp
sem1/inf/3_var30/source/: bot.cpp  field.cpp  strategy.cpp  tic_tac_toe.cpp
sem1/inf/4_var30/: main.cpp
sem1/inf/4_var30/headers/: Labyrinth.hpp  directions.hpp  iotools.hpp  maze_field.hpp  maze_game.hpp  maze_objects.hpp  player.hpp
sem1/inf/4_var30/source/: Labyrinth.cpp  maze_field.cpp  maze_game.cpp  maze_objects.cpp  player.cpp
sem1/mop/1_var12/1/: helloworld.cpp
sem1/mop/1_var12/2/: evaluation.cpp
sem1/mop/1_var12/at-12/: matrix.cpp
sem1/mop/2_var11/: sum.cpp  sum.hpp
sem1/mop/2_var11/simple/: sum.cpp
sem1/mop/2_var14/: main.cpp  sum.cpp  sum.hpp  table_print.cpp  table_print.hpp
sem1/mop/3_var15/: sort.cpp
sem1/mop/4_var14/additional/: count.cpp
sem1/mop/4_var14/main/: replace.cpp
sem1/mop/5_var9/: iotools.hpp  main.cpp  working_shedule.cpp  working_shedule.hpp
sem1/mop/5_var9/additional/: employee.cpp  employee.hpp  main.cpp  working_shedule.cpp  working_shedule.hpp
sem1/mop/5_var9/main/: main.cpp  working_shedule.cpp  working_shedule.hpp
sem2/fotopl/lab1/: main.cpp
sem2/fotopl/lab2/: main.cpp
sem2/fotopl/lab3/: main.cpp
sem2/fotopl/lab4/: main.cpp
sem2/plads/lab1/: main.cpp
sem2/plads/lab2/: var13.cpp
sem2/plads/lab3/: var4.cpp
sem2/plads/lab4/: main.cpp
sem3/oop/lab1/task4/: MyFirstProgram.java
sem3/oop/lab1/task5/: MyFirstProgram.java
sem3/oop/lab1/task6/: manifest.mf
sem3/oop/lab2/: App.java
sem3/oop/lab2/functions/: TabulatedFunction.java
sem3/oop/lab3/functions/: ArrayTabulatedFunction.java  FunctionPoint.java  InappropriateFunctionPointException.java  LinkedListTabulatedFunction.java  TabulatedFunction.java
sem3/oop/lab4/: App.java  Lab4.java  Test1.java
sem3/oop/lab4/functions/: ArrayTabulatedFunction.java  (+5 more)
sem3/oop/lab5/: Main.java
sem3/oop/lab6/: FXMLMainForm.fxml  FXMLMainFormController.java  FXMLNewDocForm.fxml  FXMLNewDocFormController.fxml  FXMLNewDocFormController.java  FunctionGUIApp.java  FunctionPointT.java  linux-build.sh  linux-run.sh  win-build.bat  win-run.bat
sem3/oop/lab7/: Main.java
sem3/oop/lab8/: Main.java
sem4/cg/lab1/: Source.cpp  main.cc
sem4/cg/lab2/: main.cpp
sem4/cg/lab3/: main.cpp
sem4/cg/lab4/: main.cpp
sem4/cg/lab5/: main.cpp
sem4/cg/lab6/: main.cpp
sem4/met/lab1/: 1_1.py  1_2.ipynb  1_2.py  1__2.ipynb  Pyformath.ipynb
sem4/met/lab2/: 2_1.ipynb  2_1.py  main.ipynb  matan (1).ipynb  matan.ipynb
sem4/met/lab3/: 3_1.ipynb  matan.ipynb
sem4/met/lab4/: LB4_NM.ipynb
sem4/met/lab5/: LB5_NM.ipynb
sem4/met/lab6/: LB6_NM.ipynb
sem4/os/lab1/: main.cpp  main.py
sem4/os/lab2/: fops.cpp  main.cpp
sem4/os/lab3/: CMakeLists.txt  CalcParameters.hpp  ClientApplication.cpp  ClientApplication.hpp  ServerApplication.cpp  ServerApplication.hpp  main.cpp
sem4/os/lab4/: CMakeLists.txt  client.cpp  server.cpp  types.hpp
sem4/os/lab5/: CMakeLists.txt  client.cpp  connection_info.hpp  message.hpp  server.cpp
sem4/os/lab6/: CMakeLists.txt  Client.cpp  Client.hpp  ClientApplication.cpp  Message.hpp  Queries.hpp  Server.cpp  Server.hpp  ServerApplication.cpp  server.ini
sem4/sys/lab1/: main.cpp
sem4/sys/lab2/: main.cpp
sem4/sys/lab3/: ip3.asm  main.cc  mainp.asm  mainp.cpp  p.asm  p2.asm  p3g.asm
sem4/sys/lab4/: O0.asm  O3.asm  main.cc  main.cpp
sem4/sys/lab5/: O0.asm  O3.asm  main.cc  main.cpp
sem4/sys/lab6/: main.cpp
sem4/sys/lab7/: main.cpp
sem6/om/lab1/: main.cpp
sem6/om/lab2/: main.cpp
sem6/om/lab5/: SimplexMethod.hpp  main.cpp
sem7/mm/lab1/: CMakeLists.txt  CMakePresets.json  PlanetSystem.cpp  PlanetSystem.hpp  View.cpp  View.hpp  vcpkg.json
sem7/mm/lab2/: CMakeLists.txt  CMakePresets.json  ImVec2QvmTraits.hpp  QueueingModel.cpp  QueueingModel.hpp  View.cpp  View.hpp  main.cpp  vcpkg.json
sem7/oi/: task1-2.m  task3-4.m  task6.m  task7.m
sem7/oi/lab1/: task5.m
sem7/oi/lab2/: 15-11-24.m  task-1.m  task-2.m  task-3.m  task-4.m  task-5.m  task-6.m  task-7.m  task-8-1.m  task-8-2.m  task-9-1.m  task-9-2.m  task-9-3.m
sem7/oi/lab3/: task-1.m  task-2.m  task-3.m  task-4.m
sem7/pp/lab0/: hello_openmp.cpp  hello_openmpi.cpp
sem7/pp/lab2/: MakeFile  common.h  loadmodules.sh  makefile  mpi.c  mpi_sani.c  omp.c  run_all.sh  run_program.sh
sem7/pp/lab3/: MakeFile  common.h  makefile  mpi.c  mulmpi.c  nonmpi.c  omp.c  run_all.sh  run_program.sh
sem7/pp/lab4/: README.md  addKernel.cu  addKernel.h  common.h  config.h  core.cu  kernel.cu  lab4.sh  loadmodules.sh  macro_utils.h  main.c  main.cu  makefile  quick_run.sh  run_all.sh  run_all_1.sh  run_all_2.sh  run_program.sh
sem7/pp/lab5/: main.c  main.cu  makefile  run_all.sh  run_program.sh
sem8/bd/L0 - Introduction to MapReduce data processing model/: MapReduceExamples.ipynb
sem8/bd/L1 - Introduction to Apache Spark/: L1_Apache_Spark_Tasks.ipynb
sem8/bd/L2 - Reports with Apache Spark/: LR2_BigData.ipynb
sem8/nn/lab1/: 6403_Хисматов_ДР_НС_ЛР1.ipynb
sem8/nn/lab2/: 6403_Хисматов_ДР_НС_ЛР2.ipynb
sem8/oisat/lab1/: CMakeLists.txt  FFTWAllocator.hpp  LightField.cpp  LightField.hpp  common.hpp  dark_field.cpp  demonstration.cpp  derivative.cpp  ellipse.cpp  ellipse.hpp  plane.cpp  plane.hpp  ray.hpp  reflection.cpp  refraction.cpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  types.hpp  utils.hpp  zernick.cpp
sem8/oisat/lab1/libboard/include/: BoardConfig.h
sem8/oisat/lab2/: CMakeLists.txt  CMakePresets.json  biconvex_lens.cpp  biconvex_lens.hpp  demonstration.cpp  ellipse.cpp  ellipse.hpp  focus.cpp  intersection.cpp  lens.cpp  plane.cpp  plane.hpp  ray.hpp  shape.cpp  sphere.hpp  utils.hpp
sem8/oisat/lab2/libboard/: CMakeLists.txt
sem8/oisat/lab2/libboard/include/: BoardConfig.h
sem8/oisat/lab2/libboard/include/board/: Tools.h
sem8/oisat/lab3/: LightField.hpp  MatrixProxy.hpp  derivative.cpp
sem8/tfssp/lab1/: base_script.m  generate_images.m  lab1.m
(+104 files in other folders)
